# ice3d

./: .gitignore  README.md  cq-conda-env.yaml  pyproject.toml
data/: helper_temp.py  rosette.py  rosette_datamodule.py  rosette_dataset.py  rosette_temp.py  single_view_datamodule.py  single_view_dataset.py  stereo_view_datamodule.py  stereo_view_dataset.py  tabular_datamodule.py  tabular_dataset.py
models/: cnn_classification.py  cnn_regression.py  mlp_classification.py  mlp_regression.py  resnet18_classification.py  resnet18_regression.py
notebooks/: 01-jk-test-rosette.ipynb  01-test-rosette.ipynb  02-test-arm.ipynb  03-test-smooth-bool.ipynb  04-import-from-cadquery.ipynb  05-generate-data-prototype.ipynb  06-rosette-cq.ipynb  07-generate-data-outline.ipynb  08-gen-params.ipynb  09-demo-ros-cq.ipynb  10-gen-from-param-list.ipynb  11-test-projections.ipynb  12-test-miniball-cq.ipynb  13-vol-area-validation.ipynb  14-fix-n6-bug.ipynb  15-residual-ros.ipynb  16-org-files-by-n.ipynb  17-projection-from-stl.ipynb  18-gen-data-from-projections.ipynb  19-check-tabular-data.ipynb  20-train-skl-models.ipynb  21-train-torch-models.ipynb  22-two-view-projections.ipynb  23-png-to-zarr.ipynb  24-projections-multiprocess.ipynb  25-subset-dataset.ipynb  26-qa-outliers.ipynb  27-update-4arms-rosettes.ipynb  28-create-stereo-tabular-data.ipynb  29-check-split-distributions.ipynb  30-create-indices.ipynb  31-torch-model-val.ipynb  32-cpi-array-fig.ipynb  34-final-figs.ipynb
output/: out_log.txt
synthetic-data/: helper.py  helper_temp.py  rosette_cq.py
(+137 files in other folders)
